# nexus

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
config/: customer_master.yaml  users_bulk.yaml  users_point.yaml
migrations/: 20231012085707_init.up.sql  20231022084421_increase_password_length.down.sql  20231022084421_increase_password_length.up.sql  20231203073638_add_token_details.down.sql  __unused__20231203073638_add_token_details.up.sql
odbc_config/etc/: odbc.ini.tmp  odbcinst.ini
odbc_config/lib/: simba.snowflake.ini
src/: _route.rs  auth.rs  config.rs  errors.rs  extractor.rs  lib.rs  main.rs  service_register.rs
src/domain/: mod.rs  req_res.rs  requests.rs
src/repositories/: data_repository.rs  mod.rs  token_repository.rs  user_repository.rs
src/routes/: app_router.rs  data_router.rs  mod.rs  user_router.rs
src/services/: data_service.rs  mod.rs  security_service.rs  token_service.rs  user_service.rs
