[package]
name = "axum_sqlx_jwt_starter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-macros = "0.3.8"
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
rust-argon2 = "2.0.0"
#secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.49"
time = "0.3.29"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
