[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
axum-macros = "0.4"
axum-server = "0.5"
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
metrics = "0.21"
rand_core = { version = "0.6.4", features = ["std"] }
rust-argon2 = "2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.32", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
axum_odbc = { version = "0.8" }
tera = "1.19"
config = "0.13"

[dev-dependencies]
tracing-test = "0.2.4"
axum-test = "12.2.0"
